# Dynamic-Risk-Dashboard

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  slides.md  style.css
.github/workflows/: deploy.yml
Paper/: Portfolio RiskQ.aux  Portfolio RiskQ.fdb_latexmk  Portfolio RiskQ.fls  Portfolio RiskQ.tex
Poster/: portfolio_riskq_poster.aux  portfolio_riskq_poster.fdb_latexmk  portfolio_riskq_poster.fls  portfolio_riskq_poster.tex
app/: main.py
app/api/: routes_experiments.py  routes_risk.py  schemas.py
app/core/: cache.py  classical_mc.py  data.py  discretization.py  engine.py  quantum_ae.py  scenarios.py
app/utils/: config.py
components/: EntangleTracker.vue
dashboard/: streamlit_app.py
data/: sample_prices.csv
data/cache/: calibration_1c5d9c46a948d65937a1014ca21b7970c831752e.npz  calibration_5f6410706411bc62235bb21c3eaa6a2e89aa6aa4.npz  calibration_8e521dfaf8f328f69dc846164e0a43d66bd7511b.npz  calibration_a6761df070cd10a3d1db6d6dfc3d4be5b76c4064.npz
docs/: api_contract.md
experiments/: README.md  render_animated_svgs.py  run_experiments.py
experiments/plots/: fontlist-v390.json
layouts/: cover.vue
scripts/: dev.sh  manual_test_discretization.py  manual_test_iqae.py
tests/: test_data.py  test_discretization.py  test_quantum_ae.py  test_risk_api.py  test_scenarios.py
