[project]
name = "dynamic-risk-dashboard"
version = "0.1.0"
dependencies = [
  "numpy",
  "pandas",
  "yfinance",
  "fastapi",
  "uvicorn",
  "pydantic-settings",
  "python-dotenv",
  "ruff",
  "black",
  "pytest",
  "streamlit==1.55.0",
  "plotly",
  "altair==5.5.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
